# imdb-swallower

./: Cargo.toml
src/: lib.rs  prelude.rs
src/engine/: mod.rs
src/helpers/: element_parser.rs  helper_tags.rs  html_parser.rs  mod.rs
src/search/: by.rs  by_title.rs  by_title_find.rs  mod.rs  results.rs
